--- a/app.css
+++ b/app.css
@@ -24,8 +24,8 @@ h1{
  text-align: center;
  box-shadow: 0 4px 8px 0 black;
  background-color: #fff;
- width: 300px;
- height: 300px;
+ width: 350px;
+ height: 350px;
  padding: 10px;
  margin: auto;
  margin-top: 50px;
@@ -79,8 +79,8 @@ h1{
    text-align: center;
    box-shadow: 0 4px 8px 0 black;
    background-color: #fff;
-   width: 400px;
-   height: 300px;
+   width: 350px;
+   height: 350px;
    padding: 10px;
    margin: auto;
    margin-top: 50px;
@@ -88,11 +88,13 @@ h1{
  }
  .title{
    font-family: 'Krona', sans-serif;
-   font-size: 32px;
+   font-size: 40px;
    justify-self: flex-start;
  }
- #start{
+ #start, .next, .submit{
    align-content: flex-end;
+   box-shadow: 5px 5px #fff000;
+   font-size: 20px;
  }
-}
+
 
