--- a/app.css
+++ b/app.css
@@ -91,8 +91,12 @@ h1{
    font-size: 32px;
    justify-self: flex-start;
  }
- #start{
+ 
+ #start, .next, .submit{
    align-content: flex-end;
+   box-shadow: 5px 5px #fff000;
+   font-size: 20px;
  }
+
 }
 
