--- a/app.css
+++ b/app.css
@@ -7,16 +7,14 @@
   *
 */
 body {
-  background-image: url('./photos/tall-image.jpg');
+  background-image: url('./photos/topography.jpg');
   background-size: cover;
-  background-repeat: no-repeat;
-  background-color: #303131;
   width:auto;
   height:auto;
 }
 h1{
   text-align: center;
-  text-shadow: 2px 2px #fff000;
+  text-shadow: 2px 2px #fff000; 
   font-size: 40px;
   font-family: 'Krona', sans-serif;
 }
@@ -41,16 +39,7 @@ h2 {
  margin-top: 50px;
  z-index: 666;
 }
-/* .background{
- display: block;
- background-image: url('./photos/map-of-usa.jpg');
- background-color: #cccccc;
- background-size: cover;
- position: fixed;
- max-width: 100%;
- top: 30px;
- z-index: -5;
-} */
+
 .image{
  display: block;
  margin-left: auto;
@@ -60,7 +49,7 @@ h2 {
 }
  #start, #next, .submit, #again{
    align-content: flex-end;
-   box-shadow: 5px 5px #fff000;
+  box-shadow: 5px 5px #fff000; 
    font-size: 20px;
  }
 .question{
@@ -74,17 +63,7 @@ h2 {
    font-size: 70px;
    font-family: 'Krona', sans-serif;
  }
- .background{
-   display: block;
-   background-image: url('./photos/map-of-usa.jpg');
-   background-color: #cccccc;
-   background-size: cover;
-   position: fixed;
-   height: 105%;
-   width: 95%;
-   top: 30px;
-   z-index: -5;
- }
+
  .container{
    font-family: 'Krona One', sans-serif;
    top: 100px;
@@ -109,25 +88,9 @@ h2 {
    justify-self: flex-start;
  }
  
- /* #start, .next, .submit{
+ #start, .next, .submit{
    align-content: flex-end;
    box-shadow: 5px 5px #fff000;
    font-size: 20px;
- } */
-
- /* #next{
-  align-content: flex-end;
-  box-shadow: 5px 5px #fff000;
-  font-size: 20px;
-
-}
-.submit{
-  align-content: flex-end;
-  box-shadow: 5px 5px #fff000;
-  font-size: 20px;
- } */
-
-/* .question{
- text-align: left;
-} */
+ } 
 }
