--- a/app.css
+++ b/app.css
@@ -14,7 +14,7 @@ body {
 }
 h1{
   text-align: center;
-  text-shadow: 2px 2px #fff000; 
+  text-shadow: 2px 2px #ff0000;
   font-size: 40px;
   font-family: 'Krona', sans-serif;
 }
@@ -90,7 +90,7 @@ h2 {
  
  #start, .next, .submit{
    align-content: flex-end;
-   box-shadow: 5px 5px #fff000;
+   box-shadow: 5px 5px #ff0000;
    font-size: 20px;
  } 
 }
