--- a/app.css
+++ b/app.css
@@ -30,7 +30,7 @@ h2 {
  align-content: flex-start;
  border-style: solid;
  text-align: center;
- box-shadow: 0 4px 8px 0 black;
+ box-shadow: 0 4px 8px 0 #000000;
  background-color: #fff;
  width: 350px;
  height: 350px;
@@ -49,7 +49,7 @@ h2 {
 }
  #start, #next, .submit, #again{
    align-content: flex-end;
-  box-shadow: 5px 5px #fff000; 
+  box-shadow: 5px 5px #ff0000; 
    font-size: 20px;
  }
 .question{
@@ -73,7 +73,7 @@ h2 {
    align-content: flex-start;
    border-style: solid;
    text-align: center;
-   box-shadow: 0 4px 8px 0 black;
+   box-shadow: 0 4px 8px 0 #000000;
    background-color: #fff;
    width: 350px;
    height: 400px;
